After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682758 - gdm 3.5.90 has wrong gvariant for on_seat_new and on_seat_remove
gdm 3.5.90 has wrong gvariant for on_seat_new and on_seat_remove
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other Linux
: Normal major
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-27 03:36 UTC by Dave Airlie
Modified: 2012-08-30 19:33 UTC
See Also:
GNOME target: 3.6
GNOME version: ---


Attachments
proposed patch (1.09 KB, patch)
2012-08-27 03:38 UTC, Dave Airlie
needs-work Details | Review
proposed patch 2 (1.01 KB, patch)
2012-08-30 04:59 UTC, Dave Airlie
accepted-commit_now Details | Review
Use correct types in on_seat_new and on_seat_removed (1.21 KB, patch)
2012-08-30 19:33 UTC, Matthias Clasen
committed Details | Review

Description Dave Airlie 2012-08-27 03:36:56 UTC
Since the GDBus port dddeab1c9223cc5d8427217846faa2b40e45c116

the on_seat_new and on_seat_removed g_variant_get for the wrong types.

the message is actually a tuple of a string + object path, not just a single string.
Comment 1 Dave Airlie 2012-08-27 03:38:23 UTC
Created attachment 222510 [details] [review]
proposed patch

This seems to work here.
Comment 2 Giovanni Campagna 2012-08-27 13:51:51 UTC
Review of attachment 222510 [details] [review]:

::: gdm-3.5.90/daemon/gdm-local-display-factory.c.dave
@@ +454,1 @@
+        g_variant_get (parameters, "(so)", &seat, &obj_path);

You're leaking seat and obj_path here.
Use "(&s&o)" instead (or pass NULL in place of obj_path)
Comment 3 Dave Airlie 2012-08-30 04:59:36 UTC
Created attachment 222910 [details] [review]
proposed patch 2
Comment 4 Giovanni Campagna 2012-08-30 11:11:10 UTC
Review of attachment 222910 [details] [review]:

LGTM
Comment 5 Matthias Clasen 2012-08-30 19:33:33 UTC
The following fix has been pushed:
25b8703 Use correct types in on_seat_new and on_seat_removed
Comment 6 Matthias Clasen 2012-08-30 19:33:35 UTC
Created attachment 222982 [details] [review]
Use correct types in on_seat_new and on_seat_removed

The message is actually a tuple of a string + object path,
not just a single string.