Use correct types in on_seat_new and on_seat_removed

The message is actually a tuple of a string + object path,
not just a single string.

https://bugzilla.gnome.org/show_bug.cgi?id=682758